Chore: Migrate remaining test classes to JUnit 5